# research-assistant

./: .gitignore  README.md  agents.md  pyproject.toml  requirements.txt  research-01.md  research-02.md
.cursor/commands/: update-docs.md
.cursor/rules/: gpt-5-structured-output.md  httpx-timeouts.md  mustache-templates.md  provider-abstraction.md
notes/: background-mode.md  design.md  todo.md  using-gpt-5.md
prompts/: planner.md  research_instructions.md  synthesize.md
src/deep_research/: __init__.py  __main__.py  cli.py  config.py  models.py  orchestrator.py  prompts.py
src/deep_research/llm/: __init__.py  base.py  openai_provider.py
src/deep_research/research/: __init__.py  base.py  openai_deep_research.py
src/research_assistant/: __init__.py
